# mrn-engine

./: .gitignore  README.md  meson.build
mrn/: meson.build
mrn/include/: mrn.h
mrn/include/mrn/: application.h  color_codes.h  event.h  keyevent.h  logger.h  mouseevent.h  window.h
mrn/src/mrn/: application.cpp  logger.cpp  window.cpp
sandbox/: meson.build
sandbox/include/: sandboxapp.h
sandbox/src/: sandboxapp.cpp
